# Rawk

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: build.yml  publish-pypi.yml  test-ci.yml
docs/api_reference/: API.html  API.md
docs/dev/: compile_api_ref.sh  compile_tutorials.sh  docstrings_to_md.py  md_to_html_pdf.py
docs/tutorials/: construct_recon3d_met_net.py  construct_recon3d_mrn.html  construct_recon3d_mrn.md  construct_recon3d_mrn.py  example_human_data_analysis.html  example_human_data_analysis.md  example_human_data_analysis.py  example_mouse_data_analysis.html  example_mouse_data_analysis.md  example_mouse_data_analysis.py
docs/tutorials/tutorial_data/: biomart_ensembl_110_eid_hs_mapping.tsv  human_l1000_level5_zscores.csv  imm1415_rxn_gene.tsv  imm1415_unfiltered_nodes.tsv  immune_cell_cluster_average_normalized_expression.tsv  recon3d_rxn_gene.tsv
docs/tutorials/tutorial_output/construct_recon3d_met_net/: recon3d_metabolites.tsv
docs/tutorials/tutorial_output/construct_recon3d_mrn/: recon3d_unfiltered_nodes.tsv
docs/tutorials/tutorial_output/example_human_data_analysis/: h_rawk_ms_es_df.csv  h_rawk_ms_padj_df.csv  h_rawk_ss_es_df.csv  h_rawk_ss_padj_df.csv  h_rxn_edges.csv  h_rxn_props.csv  rawk_es.tsv  rawk_fdr.tsv
docs/tutorials/tutorial_output/example_mouse_data_analysis/: m_rawk_ms_es_df.csv  m_rawk_ms_padj_df.csv  m_rawk_ss_es_df.csv  m_rawk_ss_padj_df.csv  m_rxn_edges.csv  m_rxn_props.csv  rawk_es.tsv  rawk_fdr.tsv
src/rawk/: __init__.py  fastrp.py  input_prep.py  multisample_rawk.py  n2v.py  plot.py  rawk.py  rawk_sample.py
